infra/k8s/causes.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: causes-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: causes
  template:
    metadata:
      labels:
        app: causes
    spec:
      containers:
        - name: causes
          image: martinseanhunt/voting-causes
---
apiVersion: v1
kind: Service
metadata:
  name: causes-srv
spec:
  type: ClusterIP
  selector:
    app: causes
  ports:
    - name: causes
      protocol: TCP
      port: 3000
      targetPort: 3000
