infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
              # port
              '-p',
              '4222',
              # port for monitoring
              '-m',
              '8222',
              # Heartbeat interval (how often nats sends events to listeners)
              '-hbi',
              '5s',
              # How long nats waits for a response from the listener before timing out
              '-hbt',
              '5s',
              # number of failed heartbeats before nats closes the connection
              '-hbf',
              '5',
              # Enable STAN debugging output
              '-SD',
              # Cluster ID (same for all services)
              '-cid',
              'nats-voting',
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
