infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: 'api.localhost'
      http:
        paths:
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /causes/?(.*)
            pathType: Prefix
            backend:
              service:
                name: causes-srv
                port:
                  number: 3000
          - path: /allocations/?(.*)
            pathType: Prefix
            backend:
              service:
                name: allocations-srv
                port:
                  number: 3000
